# angry_gl_bots_rust

./: .gitignore  Cargo.toml  ReadMe.md
playground/: animation_weights.rs
shaders/: basic_texture_shader.frag  depth_shader.vert  floor_shader.frag  geom_shader.vert  instanced_texture_shader.vert  player_shader.frag  player_shader.vert  texture_shader.frag  wiggly_shader.vert
src/: aabb.rs  bullet_store.rs  bullets.rs  bullets_parallel.rs  burn_marks.rs  capsule.rs  depth_map.rs  enemy.rs  floor.rs  framebuffers.rs  geom.rs  main.rs  muzzle_flash.rs  player.rs  quads.rs  sound_system.rs  sprite_sheet.rs  texture_cache.rs  wiggly_bois.rs
