[package]
name = "angry_gl_bots_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.54.0"
glam = "0.25.0"
image = "0.24.7"
log = "0.4.20"
#russimp = "2.0.6"
#small_gl_core = { git = "https://github.com/Rockfish/small_gl_core.git" }
small_gl_core = { path = "../small_gl_core" }
itertools = "0.12.0"
ordered-float = "4.2.0"

[[example]]
name = "animation_weights"
path = "playground/animation_weights.rs"

